--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     -->
     <title>React App</title>
   </head>
-  <body> <!--has-background-warning-->
+  <body class="has-background-warning"> <!--has-background-warning-->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
