--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@200&family=Overpass:wght@900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -29,7 +28,7 @@
     -->
     <title>React App</title>
   </head>
-  <body class="has-background-warning"> <!--has-background-warning-->
+  <body> <!--has-background-warning-->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
